--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
